# rust-agent-code

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh  planning.md
docs/: architecture.md  tools.md
src/: main.rs  output_styles.rs
src/auth/: client_config.rs  credentials.rs  mod.rs  oauth.rs
src/commands/: auth_status.rs  branch.rs  clear.rs  commit.rs  compact.rs  config_cmd.rs  context.rs  cost.rs  diff.rs  doctor.rs  effort.rs  exit.rs  export.rs  fast.rs  help.rs  keybindings_cmd.rs  login.rs  logout.rs  mcp.rs  memory.rs  mod.rs  model.rs  output_style.rs  permissions_cmd.rs  plan.rs  registry.rs  resume.rs  review.rs  settings_cmd.rs  skill.rs  stats.rs  status.rs  theme.rs  types.rs  vim.rs
src/config/: mod.rs
src/context/: claudemd.rs  git.rs  mod.rs  system_info.rs
src/engine/: agent_tool.rs  compaction.rs  config.rs  cost_tracker.rs  mod.rs  pricing.rs  query.rs  session.rs  state.rs  streaming.rs  tokens.rs
src/engine/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
src/keybindings/: default_bindings.rs  loader.rs  matcher.rs  mod.rs  parser.rs  reserved.rs  resolver.rs  types.rs
src/mcp/: client.rs  manager.rs  mod.rs  tools.rs  transport.rs  types.rs
src/mem/: mod.rs
src/models/: mod.rs
src/permissions/: checker.rs  mod.rs  path_safety.rs  types.rs
src/plugins/: loader.rs  mod.rs  types.rs
src/skills/: loader.rs  mod.rs  types.rs
src/tasks/: agent.rs  mod.rs  pill_label.rs  shell.rs  stop.rs  types.rs
src/tools/: mod.rs  registry.rs
src/tools/ask_user/: mod.rs
src/tools/bash/: executor.rs  mod.rs
src/tools/config_tool/: mod.rs
src/tools/edit/: edit_file.rs  mod.rs
src/tools/fs/: mod.rs  read_file.rs  write_file.rs
src/tools/glob_tool/: mod.rs  search.rs
src/ui/: app.rs  diff_viewer.rs  highlight.rs  markdown.rs  mod.rs
(+26 files in other folders)
