[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime & HTTP
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-openai = "0.23"

# UI & Terminal
ratatui = "0.26"
crossterm = "0.27"

# CLI & Configuration
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Serialization logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
dirs = "6.0.0"
glob = "0.3.3"
regex = "1.12.3"
futures-util = "0.3"
ferris-says = "0.3"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# UI Enhancements
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
